compiler/fir/analysis-tests/testData/resolve/diagnostics/annotationArgumentKClassLiteralTypeError.txt
FILE: annotationArgumentKClassLiteralTypeError.kt
    public final annotation class Ann : R|kotlin/Annotation| {
        public constructor(a: R|kotlin/Array<kotlin/reflect/KClass<*>>|): R|Ann| {
            super<R|kotlin/Any|>()
        }

        public final val a: R|kotlin/Array<kotlin/reflect/KClass<*>>| = R|<local>/a|
            public get(): R|kotlin/Array<kotlin/reflect/KClass<*>>|

    }
    public final val <reified T> R|T|.test: R|<anonymous><T>|
        public get(): R|<anonymous><T>| {
            ^ @R|Ann|(<implicitArrayOf>(<getClass>(R|T|), <getClass>(Q|kotlin/Array|))) object : R|kotlin/Any| {
                private constructor(): R|<anonymous><T>| {
                    super<R|kotlin/Any|>()
                }

            }

        }
